# large-text-viewer

./: Architecture.md  Cargo.toml  README(crate).md  README.md  api_usage.md  promote.md
.cache/: insn_il.rs  shadow_memory.rs
.github/workflows/: build.yml  publish.yml
crates/agf_render/: Cargo.toml
crates/agf_render/src/: canvas.rs  graph.rs  layout.rs  lib.rs  main.rs  render.rs  svg_render.rs
crates/large-text-core/: Cargo.toml
crates/large-text-core/src/: file_reader.rs  lib.rs  line_indexer.rs  search_engine.rs  text_cache.rs
docs/: Architecture.md  Performance_Analysis.md  Performance_Optimization.md  Progressive_Indexing.md
pyutils/: ida_funcs.py  todo.md
scripts/: generate_test_files.sh
src/: app.rs  app_simp.rs  build_call_tree.rs  build_call_tree_forward.rs  cli.rs  cli_core.rs  editor.rs  file_handler.rs  file_reader.rs  gui.rs  gui_egui.rs  insn_analyzer.rs  lib.rs  line_indexer.rs  main.rs  replacer.rs  search.rs  search_engine.rs  search_service.rs  shadow_memory.rs  summery_analyzer.rs  taint.rs  taint_engine.rs  trace_path_tree.rs  tree.rs
src/gum_taint/: category.rs  engine.rs  mod.rs  parser.rs
src/taint/: mod.rs  preprocessor.rs  scanner.rs  slicer.rs
src/taint_by_search/: engine.rs  mod.rs
tests/: integration_tests.rs  test_cli.sh
