[package]
name = "large-text-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance text file viewer for files >10GB"
license = "MIT"

[[bin]]
name = "large-text-viewer"
path = "src/gui_egui.rs"

[[bin]]
name = "large-text-cli"
path = "src/cli.rs"

[dependencies]
# GUI framework - egui is much better for WSL!
eframe = "0.29"
egui = "0.29"

# Memory-mapped file I/O
memmap2 = "0.9"

# Parallel processing
rayon = "1.8"

# Regular expressions
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
